--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,6 +58,26 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+  window.addEventListener('keydown', playSound);
+
+  const keys = document.querySelectorAll('.key');
+  keys.forEach( key => key.addEventListener('transitionend', removeTransition) );
+
+  function removeTransition(event) {
+    if(event.propertyName !== 'transform') return; //Skip if not transform
+    this.classList.remove('playing');
+  };
+
+  function playSound (event) {
+    const keyCode = event.keyCode;
+    const audio = document.querySelector(`audio[data-key="${keyCode}"]`);
+    const key = document.querySelector(`.key[data-key="${keyCode}"]`);
+
+    if(!audio || !key) return;
+    audio.currentTime = 0;
+    audio.play();
+    key.classList.add('playing');
+  };
 
 </script>
 
