Day 2 - JS and CSS Clock

--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,12 +62,53 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
     }
 
+    .notransition {
+      -webkit-transition: none !important;
+      -moz-transition: none !important;
+      -o-transition: none !important;
+      transition: none !important;
+    }
   </style>
 
   <script>
+    const hourHand = document.querySelector('.hour-hand');
+    const minuteHand = document.querySelector('.min-hand');
+    const secondHand = document.querySelector('.second-hand');
+    function setInitialDate () {
 
+    };
+
+    function setDate() {
+      const now = new Date();
+
+      const seconds = now.getSeconds();
+      const secondsDegree = ((seconds / 60) * 360) + 90;
+      secondHand.style.transform = `rotate(${secondsDegree}deg)`
+
+      const minutes = now.getMinutes();
+      const minutesDegree = ((minutes / 60) * 360) + 90;
+      minuteHand.style.transform = `rotate(${minutesDegree}deg)`;
+
+      const hour = now.getHours();
+      const hoursDegree = ((hour / 12) * 360) + 90;
+      hourHand.style.transform = `rotate(${hoursDegree}deg)`;
+
+      //Remove transition effect when seconds reaches 60
+      if (seconds === 59) {
+        secondHand.classList.add('notransition');
+      }
+      if (seconds === 1) {
+        secondHand.classList.remove('notransition');
+      };
+    };
+
+    setInterval(setDate, 1000);
 
   </script>
 </body>
