--- a/14 - JavaScript References VS Copying/index-START.html
+++ b/14 - JavaScript References VS Copying/index-START.html
@@ -8,11 +8,16 @@
 
   <script>
     // start with strings, numbers and booleans
-
+    let name = 'J';
+    let name2 = name;
+    console.log(name, name2);
     // Let's say we have an array
     const players = ['Wes', 'Sarah', 'Ryan', 'Poppy'];
 
     // and we want to make a copy of it.
+    const players2 = players;
+    players2[3] = 'Sam';
+    console.log(players, players2)
 
     // You might think we can just do something like this:
 
@@ -27,7 +32,12 @@
     // So, how do we fix this? We take a copy instead!
 
     // one way
+    const players3 = [...players];
+    players3[3] = 'Cool';
+    console.log(players, players3)
 
+    const players4 = Array.from(players);
+    console.log(players, players4);
     // or create a new array and concat the old one in
 
     // or use the new ES6 Spread
@@ -43,13 +53,29 @@
     };
 
     // and think we make a copy:
-
+    const captain = person;
+    // captain.number = 99;
     // how do we take a copy instead?
+    const captain2 = Object.assign({}, person, {number: 99});
+    console.log(person, captain2);
 
+    const captain3 = {...person};
     // We will hopefully soon see the object ...spread
 
     // Things to note - this is only 1 level deep - both for Arrays and Objects. lodash has a cloneDeep method, but you should think twice before using it.
+    const cool = {
+      age: 3,
+      name: 'Hey',
+      address: {
+        street: 'Fake',
+        city: 'Fake City'
+      }
+    }
 
+    const coolPerson = Object.assign({}, cool);
+    coolPerson.address.street = 'real';
+
+    console.log(cool, coolPerson);
   </script>
 
 </body>
