--- a/16 - Mouse Move Shadow/index-START.html
+++ b/16 - Mouse Move Shadow/index-START.html
@@ -35,6 +35,27 @@
   </style>
 
 <script>
+
+    const hero = document.querySelector('.hero');
+    const text = hero.querySelector('h1');
+
+    function shadow(e) {
+      const { offsetWidth: width, offsetHeight: height } = hero;
+      let { offsetX: x, offsetY: y} = e;
+      const walk = 100;
+
+      if(this !== e.target) {
+        x = x + e.target.offsetLeft;
+        y = y + e.target.offsetTop;
+      };
+
+      const xWalk = Math.round((x / width * walk) - (walk / 2));
+      const yWalk = Math.round((x / height * walk) - (walk / 2));
+
+      text.style.textShadow = `${xWalk}px ${yWalk}px 0 rgba(255,0,255,0.7)`;
+    };
+
+    hero.addEventListener('mousemove', shadow);
 </script>
 </body>
 </html>
